codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__default_unified_mention_popup.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 5328
expression: terminal.backend()
---
"  Mentions                                                                                          "
"   All Results   Filesystem Only   Plugins                                                          "
"  sa                                                                                                "
"› Sample Plugin   Plugin with skills and an MCP server                                        Plugin"
"  enter/tab insert · esc close · ↑/↓ select · ←/→ filter                                            "
"                                                                                                    "
"› @sa                                                                                               "
"                                                                                                    "
"                                                                                 100% context left  "
