codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__draft_completion_popup_error.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                        "
"› hell                                                                  "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"                                                                        "
"draft completion timed out                                              "
